<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/shoppingcartmkt"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/StoreName"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/app_slogan"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_button"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/text_or"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:padding="22sp"
        android:textSize="20sp"
        android:background="@drawable/buttons" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_or"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/SignUp_button"
        />

    <Button
        android:id="@+id/SignUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:padding="12sp"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:text="@string/signUp_Button"
        tools:targetApi="p"/>


</RelativeLayout>