<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <ImageView

        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/shoppingcartmkt"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/StoreName"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_alert"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_above="@id/register_username_input"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_phone_number_input"
        android:layout_marginBottom="10sp"
        android:background="@drawable/inputdesign"
        android:padding="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password_input"
        android:layout_marginBottom="10sp"
        android:background="@drawable/inputdesign"
        android:padding="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:hint="Número de Teléfono"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_btn"
        android:layout_marginBottom="20sp"
        android:background="@drawable/inputdesign"
        android:padding="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="6sp"
        android:hint="Contraseña"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crear Cuenta"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:padding="22sp"
        android:textSize="20sp"
        android:background="@drawable/buttons" />
</RelativeLayout>