<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/shoppingcartmkt"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/StoreName"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/remember_me_chkb"
        android:layout_marginTop="7dp"
        />

    <com.rey.material.widget.CheckBox
        android:id="@+id/remember_me_chkb"
        style="@style/Material.Drawable.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_phone_number_input"
        android:layout_marginLeft="245dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="Grabar Datos"
        android:textColor="@color/colorPrimaryDark"
        app:cbd_strokeColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageView"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="2dp"
        android:text="Administrador?"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageView"
        android:layout_marginStart="190dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:text="I'm not Admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/Forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olvidó Contraseña?"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginLeft="25dp"
        android:layout_above="@id/login_phone_number_input"
        android:layout_marginBottom="14dp"
        />


    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password_input"
        android:layout_marginBottom="10sp"
        android:background="@drawable/inputdesign"
        android:padding="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:background="@drawable/inputdesign"
        android:padding="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginBottom="8sp"
        android:hint="Contraseña"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttons"
        android:padding="22sp"
        android:text="@string/LoginButton"
        android:textSize="20sp" />


</RelativeLayout>